# pico-gpt

./: .gitignore  Cargo.toml  README.md  notes.md
scripts/: download_model.py
src/: encoder.rs  ext.rs  gpt2.rs  hyper_params.rs  lib.rs  main.rs  utils.rs
