[package]
name = "pico_gpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { version = "0.13.0", features=["wgpu", "autodiff"] }
burn-tensor = "0.13.0"

serde = {version = "1.0.171", features = ["std", "derive"]}
serde_json = "1.0.113"

fancy-regex = "0.13.0"
anyhow = "1.0.79"
extend = "1.2.0"

ndarray = "0.15.6"
ndarray-npy = "0.8.1"

clap = { version = "4.4.18", features = ["derive"] }